<resources>
    <string name="app_name">Sesim</string>
    <string name="login">Sign in</string>
    <string name="login_google">Sign in with Google</string>
    <string name="register">Sign up</string>
    <string name="name">Name</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="or">OR</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="have_account">Have an account?</string>
    <string name="join_us">Join us now.</string>
    <string name="login_now">Login now.</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_home">HomeActivity</string>
</resources>