<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    android:orientation="vertical"
    tools:context=".RegisterActivity"
    android:gravity="center"
    >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="188dp"
        android:layout_height="171dp"
        android:src="@drawable/logo_title"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        />

    <EditText
        android:id="@+id/register_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="10dp"
        android:ems="10"
        android:background="@drawable/custom_input"
        android:drawablePadding="12dp"
        android:drawableStart="@drawable/custom_email_icon"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="14sp"
        android:hint="@string/name" />
    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="10dp"
        android:ems="10"
        android:background="@drawable/custom_input"
        android:drawablePadding="12dp"
        android:drawableStart="@drawable/custom_email_icon"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="14sp"
        android:inputType="textEmailAddress"
        android:hint="@string/email" />
    <EditText
        android:id="@+id/register_password"
        android:drawablePadding="12dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_lock_icon"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="10dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:ems="10"
        android:textSize="14sp"
        android:inputType="textPassword"
        android:hint="@string/password" />
    <EditText
        android:id="@+id/register_password_confirm"
        android:drawablePadding="12dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_lock_icon"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="10dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:ems="10"
        android:textSize="14sp"
        android:inputType="textPassword"
        android:hint="@string/password_confirm" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/sign_up_button"
        android:drawableLeft="@drawable/ic_arrow_back_white"
        android:paddingHorizontal="20dp"
        android:text="@string/register"
        android:textColor="#fff"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        >

        <View
            android:id="@+id/divider6"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="21dp"
            android:layout_height="17dp"
            android:text="@string/or"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <View
            android:id="@+id/divider5"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="32dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/have_account" />

        <TextView
            android:id="@+id/login_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/login_now"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>